Update FE + Create API BE
LoginUI + Firebase Config + Swagger Config + Create Auth API
