# routes.js
@@ -3,12 +3,13 @@ import RoomController from './src/controller/RoomController'
 
 module.exports = (app) => {
   app.route('/')
-    .get((req, res) => {
-      res.send('Hello World')
-    })
+    .get((req, res) => res.send('Hello World'))
+  
+  app.route('/auth/login')
+    .post(UserController.loginWithFirebaseToken)
 
-  app.route('/api/user')
-    .post(UserController.createUser)
+  app.route('/api/users')
+    .get(UserController.getUserAvailable)
 
   app.route('/api/room')
     .post(RoomController.createRoom)
